--- a/inference.ipynb
+++ b/inference.ipynb
@@ -54,15 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading local csv from: e:\\Uni\\MSc AI\\INM706-Sequential-Analysis\\INM706_NER\\dataset\n",
-      "35178\n"
+      "Loading local csv from: e:\\Uni\\MSc AI\\INM706-Sequential-Analysis\\INM706_NER\\dataset\n"
      ]
     }
    ],
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,29 +121,47 @@
      "output_type": "stream",
      "text": [
       "Output sentence:\n",
-      "spokesman O\n",
-      "task O\n",
-      "asked O\n",
-      "unemployment O\n",
+      "comes O\n",
+      "operations O\n",
+      "place O\n",
+      "sidelines O\n",
       "Iraq O\n",
-      "Possible B-geo\n",
-      "wants O\n",
+      "Venevision O\n",
+      "Bekasi O\n",
+      "Iraq O\n",
       "war O\n",
-      "border B-gpe\n",
-      "go O\n",
-      "threatened O\n",
-      "document O\n",
-      "protest O\n",
-      "sure O\n",
-      "adhere O\n",
-      "country O\n",
-      "war O\n",
-      "Central O\n",
-      "jirga O\n",
-      "challenges O\n",
-      "candidate O\n",
-      "stability O\n",
+      "Pakhtunkhwa O\n",
+      "lands O\n",
+      "quotes O\n",
+      "including O\n",
+      "IAEA O\n",
+      "His O\n",
+      "bulk O\n",
+      "correctness O\n",
+      "Helicopter O\n",
+      "marched O\n",
+      "4.6 O\n",
+      "government O\n",
+      "eve O\n",
+      "buses O\n",
+      "Ethiopian-born O\n",
+      "shortage O\n",
+      "Militant O\n",
+      "backing B-geo\n",
+      "demand O\n",
+      "aircraft B-org\n",
+      "from O\n",
+      "Iraq O\n",
+      "man B-geo\n",
       "Families O\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Uni\\MSc AI\\INM706-Sequential-Analysis\\INM706_NER\\INM706_cw_env\\lib\\site-packages\\torch\\nn\\modules\\rnn.py:911: UserWarning: RNN module weights are not part of single contiguous chunk of memory. This means they need to be compacted at every call, possibly greatly increasing memory usage. To compact weights again call flatten_parameters(). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\cudnn\\RNN.cpp:1424.)\n",
+      "  result = _VF.lstm(input, hx, self._flat_weights, self.bias, self.num_layers,\n"
      ]
     }
    ],
@@ -162,7 +179,6 @@
     "\n",
     "np_tags = tag_preds[0].cpu().numpy()\n",
     "\n",
-    "\n",
     "print('Output sentence:')\n",
     "for ind, word in enumerate(sentence.numpy()):\n",
     "    if word > 0:\n",
@@ -178,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,28 +202,38 @@
      "output_type": "stream",
      "text": [
       "Output sentence:\n",
-      "spokesman O\n",
-      "task O\n",
-      "asked O\n",
-      "unemployment O\n",
-      "Iraq O\n",
-      "Possible B-geo\n",
-      "wants O\n",
-      "war O\n",
-      "border B-gpe\n",
-      "go O\n",
-      "threatened O\n",
-      "document O\n",
+      "faith O\n",
+      "restarted O\n",
+      "including O\n",
+      "backing B-geo\n",
+      "explained O\n",
+      "kidnapped O\n",
+      "bilateral O\n",
+      "being O\n",
+      "expect O\n",
+      "mutate O\n",
+      "energy O\n",
       "protest O\n",
-      "sure O\n",
-      "adhere O\n",
-      "country O\n",
+      "running O\n",
+      "participate O\n",
+      "Iraq O\n",
       "war O\n",
-      "Central O\n",
-      "jirga O\n",
-      "challenges O\n",
-      "candidate O\n",
-      "stability O\n",
+      "city O\n",
+      "Mosul O\n",
+      "demonstrators O\n",
+      "offensive B-geo\n",
+      "recognition O\n",
+      "war O\n",
+      "Soh B-geo\n",
+      "extension O\n",
+      "including O\n",
+      "finds O\n",
+      "military B-gpe\n",
+      "blame O\n",
+      "Juba O\n",
+      "Anbar O\n",
+      "protest O\n",
+      "inside O\n",
       "Families O\n"
      ]
     }
@@ -231,11 +257,6 @@
     "    if word > 0:\n",
     "        print(vocab[word], tags[np_tags[ind]])\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
